<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorParentBackground"
    tools:context="com.madgorillastudios.cisco.scorecounter.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/top_selection_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@color/colorTopSelectionBar"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Spinner
            android:id="@+id/team_a_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorLineDividerTopSelectionBar" />

        <Spinner
            android:id="@+id/game_quarter_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorLineDividerTopSelectionBar" />

        <Spinner
            android:id="@+id/team_b_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_selection_bar"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/golden_state_warriors" />

            <TextView
                android:id="@+id/text_view_score_team_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_quarter_label" />

                    <TextView
                        android:id="@+id/text_view_first_quarter_score_team_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/second_quarter_label" />

                    <TextView
                        android:id="@+id/text_view_second_quarter_score_team_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/third_quarter_label" />

                    <TextView
                        android:id="@+id/text_view_third_quarter_score_team_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fourth_quarter_label" />

                    <TextView
                        android:id="@+id/text_view_fourth_quarter_score_team_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overtime_label" />

                    <TextView
                        android:id="@+id/text_view_overtime_score_team_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button_plus_three_points_team_a"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/three_points_label" />

            <Button
                android:id="@+id/button_plus_two_points_team_a"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/two_points_label" />

            <Button
                android:id="@+id/button_plus_one_point_team_a"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/one_point_label" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="80dp"
            android:background="@color/colorLineDivider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/chicago_bulls" />

            <TextView
                android:id="@+id/text_view_score_team_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_quarter_label" />

                    <TextView
                        android:id="@+id/text_view_first_quarter_score_team_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/second_quarter_label" />

                    <TextView
                        android:id="@+id/text_view_second_quarter_score_team_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/third_quarter_label" />

                    <TextView
                        android:id="@+id/text_view_third_quarter_score_team_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fourth_quarter_label" />

                    <TextView
                        android:id="@+id/text_view_fourth_quarter_score_team_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overtime_label" />

                    <TextView
                        android:id="@+id/text_view_overtime_score_team_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button_plus_three_points_team_b"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/three_points_label" />

            <Button
                android:id="@+id/button_plus_two_points_team_b"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/two_points_label" />

            <Button
                android:id="@+id/button_plus_one_point_team_b"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/one_point_label" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_reset_scores"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:text="@string/reset_label" />
</RelativeLayout>
